# vpsman

./: .gitattributes  .gitignore  AUDIT.md  Cargo.toml  DESIGN.md  ISSUES.md  README.md  clippy.toml  rust-toolchain.toml  version-template.json
.cargo/: config.toml
config/: vpsman.toml
crates/agent/: Cargo.toml  build.rs
crates/agent/src/: agent_binary_path.rs  backup.rs  build_info.rs  child_process.rs  cli.rs  command_ledger.rs  command_worker.rs  config_update.rs  discovery.rs  discovery_tests.rs  executor.rs  executor_tests.rs  file_browser.rs  file_download.rs  file_pull.rs  file_push.rs  main.rs  network_apply.rs  network_hooks.rs  network_interfaces.rs  network_managed_files.rs  network_probe.rs  network_runtime.rs  network_speed.rs  network_status.rs  platform_accounts.rs  process.rs  process_cleanup.rs  restore.rs  restore_rollback.rs  runtime.rs  safe_file.rs  safe_fs.rs  supervisor.rs  supervisor_cgroup.rs  supervisor_tests.rs  supervisor_validation.rs  telemetry.rs  telemetry_custom.rs  telemetry_traffic.rs  (+3 more)
crates/agent/src/network_apply/: tests.rs
crates/agent/src/network_hooks/: tests.rs
crates/agent/src/network_runtime/: command_runner.rs  tests.rs
crates/agent/src/network_status/: tests.rs
crates/api/: Cargo.toml
crates/api/src/: agent_update_artifact_ingest.rs  auth_model.rs  auth_totp.rs  backup_artifact_crypto.rs  backup_auto_artifacts.rs  backup_handoff.rs  backup_upload_sessions.rs  build_info.rs  client_ip.rs  data_source_builtin_presets.rs  error.rs  fleet_alert_notifications.rs  fleet_alerts.rs  gateway_client.rs  job_dispatcher.rs  job_files.rs  job_lifecycle.rs  job_request.rs  job_target_validation.rs  job_terminal.rs  main.rs  model.rs  model_agent_updates.rs  model_alert_notifications.rs  model_alert_policies.rs  model_alert_states.rs  model_backups.rs  model_command_templates.rs  model_dashboard.rs  model_data_sources.rs  model_file_transfer.rs  model_history.rs  model_rollout_policies.rs  model_server_jobs.rs  model_source_templates.rs  model_terminal.rs  model_topology.rs  model_webhook_rules.rs  object_store.rs  privilege.rs  (+119 more)
crates/api/src/routes_jobs/: tests.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: auth.rs  config.rs  expression.rs  file_transfer.rs  lib.rs  metrics.rs  network.rs  private_file.rs  protocol.rs  release_identity.rs  suite_config.rs  template.rs  tlv.rs  transport.rs  update_manifest.rs
crates/common/src/config/: models.rs  tests.rs  validation.rs
crates/common/src/network/: backends.rs  cost.rs  legacy.rs  models.rs  planner.rs  tests.rs
crates/common/tests/fixtures/: expression-cases.json
crates/gateway/: Cargo.toml
crates/gateway/src/: api_client.rs  build_info.rs  control.rs  main.rs  state.rs
crates/object-store/: Cargo.toml
crates/object-store/src/: lib.rs
crates/server-build-info/: Cargo.toml  build.rs
crates/server-build-info/src/: lib.rs
crates/vpsctl/: Cargo.toml  build.rs
crates/vpsctl/src/: backup_artifact_crypto.rs  build_info.rs  cli.rs  cli_access.rs  cli_update.rs  commands.rs  commands_auth.rs  commands_backups.rs  commands_config.rs  commands_dispatch_access.rs  commands_dispatch_backups.rs  commands_dispatch_jobs.rs  commands_enrollment.rs  commands_file_transfer.rs  commands_file_transfer_download.rs  commands_file_transfers.rs  commands_files.rs  commands_inventory.rs  commands_jobs.rs  commands_keys.rs  commands_migrations.rs  commands_network.rs  commands_process.rs  commands_schedules.rs  commands_terminal.rs  commands_terminal_sessions.rs  http.rs  jobs.rs  main.rs  network_runtime_args.rs  output.rs  privilege.rs  proof.rs  util.rs  vty.rs  vty_agent_update.rs  vty_auth.rs  vty_backup_artifacts.rs  vty_backups.rs  vty_backups_tests.rs  (+26 more)
crates/worker/: Cargo.toml
crates/worker/src/: actor_authority.rs  alert_notifications.rs  backup_policy_retention.rs  build_info.rs  main.rs  rollout_automation.rs  telemetry_rollups.rs  webhook_rules.rs  worker_leases.rs
deploy/: .env.example  AGENT_ENROLL.md  AGENT_GATEWAY_INSTALL.md  README.md  compose.yml  enroll-agent.sh  install-agent.sh  nginx.conf  update.sh
docs/: agent-config.example.toml  build.md  customizability-audit.md  job-status-model.md  large-file-split-notes.md  migration-compatibility.md  operator-access-scopes.md  target-selectors.md
fixtures/: expression-cases.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
migrations/: 0001_identity_access.sql  0001_init.sql  0002_jobs_schedules_commands.sql  0002_operator_sessions.sql  0003_schedules.sql  0003_telemetry_alerts_history.sql  0004_backups_restores.sql  0004_tunnel_plans.sql  0005_enrollment_tokens.sql  0005_network_tunnels.sql  0006_agent_updates.sql  0006_backup_requests.sql  0007_data_sources_file_transfer.sql  0007_scheduled_job_dispatch.sql  0007_source_templates_file_transfer.sql  0008_async_job_state_constraints.sql  0008_restore_plans.sql  0008_system_metrics.sql  0009_job_approvals.sql  0009_network_observations.sql  0009_state_constraints.sql  0010_agent_update_rollouts.sql  0011_gateway_sessions.sql  0012_telemetry_rollups.sql  0013_telemetry_rollup_disk_network.sql  0014_operator_scopes.sql  0015_telemetry_network_rates.sql  0016_operator_totp.sql  0017_job_output_artifacts.sql  0018_migration_links.sql  0019_agent_update_releases.sql  0020_agent_update_artifact_hosting.sql  0021_tunnel_plan_endpoint_status.sql  0022_agent_capabilities.sql  0023_rollout_automation.sql  0024_enrollment_reenrollment_policy.sql  0025_data_source_presets.sql  0026_file_transfer_source_artifacts.sql  0027_rollout_control.sql  0028_rollout_delegated_rollback.sql  (+17 more)
scripts/: audit-agent-static-deps.sh  audit-customizability.sh  audit-large-files.sh  audit-migrations.sh  audit-tutorials.sh  check-frontend-contracts.sh  install-agent.sh  lib-smoke-postgres-backups.sh  lib-smoke-postgres-live-job-workflow.sh  lib-smoke-process-supervisor.sh  lib-smoke.sh  release-check.sh  scan-repo-hygiene.sh  security-sweep.sh  smoke-agent-endpoint-failover.sh  smoke-agent-install-assets.sh  smoke-final-e2e.sh  (+36 more)
(+196 files in other folders)
