[workspace]
resolver = "2"
members = [
    "build/build-support",
    "crates/common",
    "crates/agent",
    "crates/gateway",
    "crates/api",
    "crates/worker",
    "crates/vpsctl",
    "crates/server-core",
    "crates/server-build-info",
    "crates/object-store",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
authors = ["vpsman contributors"]

[workspace.dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22.1"
bytes = "1.10.1"
chacha20poly1305 = "0.10.1"
chrono-tz = "0.10.4"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
croner = "3.0.1"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
libc = "0.2.172"
lz4_flex = "0.11.5"
rand = "0.8.5"
regex = "1.11.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23.40", default-features = false, features = ["std", "tls12"] }
rustls-rustcrypto = "0.0.2-alpha"
rustls-pki-types = "1.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sha1 = "0.10.6"
snow = "0.9.6"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "migrate"] }
tar = "0.4.44"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
webpki-roots = "1.0.7"

[profile.release]
strip = "symbols"
