[package]
name = "vpsman-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
hex.workspace = true
libc.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vpsman-common = { path = "../common" }

[build-dependencies]
vpsman-build-support = { path = "../../build/build-support" }
