[package]
name = "vpsman-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
lz4_flex.workspace = true
libc.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snow.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[build-dependencies]
vpsman-build-support = { path = "../../build/build-support" }
