[package]
name = "vpsman-object-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
hmac.workspace = true
reqwest.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true
