[package]
name = "vpsman-server-build-info"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
vpsman-common = { path = "../common" }

[build-dependencies]
vpsman-build-support = { path = "../../build/build-support" }
