[package]
name = "vpsctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
libc.workspace = true
lz4_flex.workspace = true
rand.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rustls-rustcrypto.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
uuid.workspace = true
vpsman-common = { path = "../common" }
webpki-roots.workspace = true
x25519-dalek.workspace = true
