[package]
name = "vpsman-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
croner.workspace = true
hex.workspace = true
hmac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vpsman-common = { path = "../common" }
vpsman-object-store = { path = "../object-store" }
vpsman-server-core = { path = "../server-core" }
vpsman-server-build-info = { path = "../server-build-info" }
